# segmentation-models-comparison

./: .gitignore  README.md  pyproject.toml
notebooks/: evaluate.ipynb  training.ipynb  visualization.ipynb
src/: dataset.py  diceloss.py  evaluate.py  main.py  utils.py  visualization.py
src/checkpoints/: fpn_Epochs:1_lf:DiceLoss_lr:0.0002_trainhist.json  fpn_Epochs:5_lf:DiceLoss_lr:0.0002_trainhist.json  pspnet_Epochs:5_lf:DiceLoss_lr:0.0002_trainhist.json  pspnet_Epochs:5_training_history.json  pspnet_training_history.json  unet_Epochs:1_lf:DiceLoss_lr:0.0002_trainhist.json  unet_Epochs:5_lf:DiceLoss_lr:0.0002_trainhist.json  unet_Epochs_5_lf_DiceLoss_lr_0.0002_trainhist.json  unet_training_history.json
