[project]
name = "segmentation-models-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0.0",
    "opencv-python>=4.0.0",
    "segmentation-models-pytorch>=0.3.3",
    "ipykernel>=7.1.0",
    "fire>=0.7.1",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "torchvision>=0.24.1",
    "torchmetrics>=1.8.2",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
]
